--- a/hemocycle/package.json
+++ b/hemocycle/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.2",
     "expo": "~54.0.12",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
