--- a/hemocycle/frontend/package.json
+++ b/hemocycle/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.2",
+    "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
