--- a/hemocycle/frontend/package.json
+++ b/hemocycle/frontend/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.2",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.12",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "private": true
 }
