--- a/hemocycle/frontendf/android/app/src/main/AndroidManifest.xml
+++ b/hemocycle/frontendf/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -24,4 +29,5 @@
         </intent-filter>
       </activity>
     </application>
+
 </manifest>
