--- a/hemocycle/frontendf/package.json
+++ b/hemocycle/frontendf/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0"
   },
