--- a/hemocycle/frontendf/package.json
+++ b/hemocycle/frontendf/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "^2.11.3",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "axios": "^1.12.2",
+    "googleapis": "^162.0.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0"
