--- a/hemocycle/frontendf/package.json
+++ b/hemocycle/frontendf/package.json
@@ -20,9 +20,12 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.29.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
